Add java 9 module workaround